Modify hr Margin

--- a/src/styles/Murga.scss
+++ b/src/styles/Murga.scss
@@ -727,6 +727,10 @@ ins.adsbygoogle {
     margin-left: 2rem;
   }
   
+  hr {
+    margin-top: 1.5em;
+  }
+  
   // インライン要素
   // --------------------------------------------------
   
