--- a/src/styles/ElMylar.scss
+++ b/src/styles/ElMylar.scss
@@ -715,6 +715,10 @@ ins.adsbygoogle {
     margin-left: 2rem;
   }
   
+  hr {
+    margin-top: 1.5em;
+  }
+  
   // インライン要素
   // --------------------------------------------------
   
