--- a/src/styles/Murga.scss
+++ b/src/styles/Murga.scss
@@ -715,11 +715,11 @@ ins.adsbygoogle {
   
   blockquote {
     margin-left: 1rem;
-    padding: 1rem 1rem 0;
+    padding: 1.25em 1rem 0;
     
     // 引用ツールが挿入されるため余白のズレをなくす
     & > :last-child {
-      margin-bottom: 1rem;
+      margin-bottom: 1.25em;
     }
   }
   
@@ -1097,8 +1097,8 @@ ins.adsbygoogle {
   .search-result-form {  // form
     position: relative;
     border: 1px solid $colour-grey-hatena;
-    padding-right: calc(20px + 1rem);  // .search-result-button 分の余白を右に開けておく
     border-radius: 4px;
+    padding-right: calc(20px + 1rem);  // .search-result-button 分の余白を右に開けておく
     
     .search-result-input {  // input[type="text"]
       width: 100%;
@@ -1166,8 +1166,8 @@ ins.adsbygoogle {
   .search-form {  // form
     position: relative;
     border: 1px solid $colour-grey-hatena;
-    padding-right: calc(20px + 1rem);  // .search-module-button 分の余白を右に開けておく
     border-radius: 4px;
+    padding-right: calc(20px + 1rem);  // .search-module-button 分の余白を右に開けておく
     
     .search-module-input {  // input[type="text"]
       width: 100%;
