--- a/src/styles/ElMylar.scss
+++ b/src/styles/ElMylar.scss
@@ -529,6 +529,29 @@ ins.adsbygoogle {
   margin-bottom: 1rem;
 }
 
+// 独自ハンバーガーメニュー
+#n-hm {
+  z-index: 10;
+  position: absolute;
+  top: 1.3rem;
+  right: 1rem;
+  font-size: 1.8em;
+  line-height: 1;
+  
+  a {
+    display: inline-block;
+    border: 1px solid $colour-white;
+    border-radius: 4px;
+    padding: 2px 10px 4px 8px;  // i.blogicon-reorder のサイズに合わせる
+    color: $colour-white;
+    background: rgba(255, 255, 255, .15);
+    
+    &:hover {
+      color: $colour-blue !important;
+    }
+  }
+}
+
 
 /* ==================================================
  * パンくずリスト
