Add Fallback Scripts to Corredor

--- a/src/styles/ElMylar.scss
+++ b/src/styles/ElMylar.scss
@@ -2,7 +2,7 @@
 /*! Responsive: yes */
 
 // Neo's Normalize
-@import '../../node_modules/@neos21/neos-normalize/neos-normalize';
+@import '../../node_modules/@neos21/neos-normalize/neos-normalize.scss';
 
 /*! El Mylar [Styles] : Neo (@Neos21) http://neos21.hateblo.jp/ */
 
