--- a/src/styles/BitArcher.scss
+++ b/src/styles/BitArcher.scss
@@ -2,7 +2,7 @@
 /*! Responsive: yes */
 
 // Neo's Normalize
-@import '../../node_modules/@neos21/neos-normalize/neos-normalize';
+@import '../../node_modules/@neos21/neos-normalize/neos-normalize.scss';
 
 /*! Bit-Archer [Styles] : Neo (@Neos21) http://bit-archer.hatenablog.com/ */
 
