--- a/src/styles/Corredor.scss
+++ b/src/styles/Corredor.scss
@@ -2,7 +2,7 @@
 /*! Responsive: yes */
 
 // Neo's Normalize
-@import '../../node_modules/@neos21/neos-normalize/neos-normalize';
+@import '../../node_modules/@neos21/neos-normalize/neos-normalize.scss';
 
 /*! Corredor [Styles] : Neo (@Neos21) http://neos21.hatenablog.com/ */
 
@@ -1351,4 +1351,10 @@ ins.adsbygoogle {
 // share-template-wrapper : JavaScript で Clone して記事下にシェアリンクを配置するための雛形
 #n-stw {
   display: none;
+}
+
+// check : CSS 読込が正常に行えているか確認するための検証用要素
+#n-check {
+  display: none;
+  font-size: 0;
 }
