--- a/src/styles/Murga.scss
+++ b/src/styles/Murga.scss
@@ -2,7 +2,7 @@
 /*! Responsive: yes */
 
 // Neo's Normalize
-@import '../../node_modules/@neos21/neos-normalize/neos-normalize';
+@import '../../node_modules/@neos21/neos-normalize/neos-normalize.scss';
 
 /*! Murga [Styles] : Neo (@Neos21) http://neos21.hatenablog.jp/ */
 
