--- a/src/styles/ElMylar.scss
+++ b/src/styles/ElMylar.scss
@@ -53,7 +53,7 @@ $colour-heading-grey          : #959799;
 
 // 英文のみの要素用のフォント指定
 @mixin english-font-family() {
-  font-family: Verdana, "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif;
+  font-family: Verdana, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 // li 要素をリセットする
@@ -90,7 +90,7 @@ $colour-heading-grey          : #959799;
  *          ex. 100 * (18px - 17px) / (1200px - 992px) = 100 * 1px / 208px = 0.4808...
  * - 参考 : https://websemantics.uk/tools/responsive-font-calculator/
  */
- @mixin responsive-font-size() {
+@mixin responsive-font-size() {
   // 最小サイズ (基準)
   font-size: 17px;
   
@@ -1098,7 +1098,7 @@ ins.adsbygoogle {
  * #main-inner 直下・.search-form と同じにしておく
  * ================================================== */
 
- .search-result {
+.search-result {
   // h2.archive-heading
   
   .search-result-form {  // form
@@ -1130,7 +1130,7 @@ ins.adsbygoogle {
       cursor: pointer;
       
       &:hover {
-       opacity: .85;
+        opacity: .85;
       }
     }
   }
@@ -1213,7 +1213,7 @@ ins.adsbygoogle {
       cursor: pointer;
       
       &:hover {
-       opacity: .85;
+        opacity: .85;
       }
     }
   }
