--- a/src/styles/ElMylar.scss
+++ b/src/styles/ElMylar.scss
@@ -979,6 +979,9 @@ $header-height-max: 200px;
   @media all and (-ms-high-contrast: none) {
     display: -ms-grid;
     -ms-grid-columns: 1fr 1fr;
+    
+    ul:first-child { -ms-grid-column: 1; }
+    ul:last-child  { -ms-grid-column: 2; }
   }
   
   li {
