--- a/src/styles/Corredor.scss
+++ b/src/styles/Corredor.scss
@@ -1033,14 +1033,14 @@ $header-height-max: calc(175px + #{$header-margin-top});
     }
   }
   
-  // 幅が狭い時は5列にする
+  // 幅が狭い時は4列にする
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   grid-column-gap: .7rem;
   
-  // 2列・3列で2行作る : 各アイテムの grid-column で結合利用するセルを指定する
+  // 2列・2行
   @media (min-width: $breakpoint-md) {
-    grid-template-columns: 30% 14% 14% 30%;
+    grid-template-columns: 1fr 1fr;
     grid-gap: .7rem 4%;
   }
   
@@ -1051,17 +1051,13 @@ $header-height-max: calc(175px + #{$header-margin-top});
   // li
   .n-f-ha { @include n-f(#3d3f44); }
   .n-f-fe { @include n-f(#67c150); }
-  .n-f-tw { @include n-f(#55acee); }
   .n-f-fb { @include n-f(#3a5795); }
   .n-f-ig { @include n-f(#3f729b); }
   
-  // li : 2列・3列で2行作る時の結合利用するセルを指定する
+  // li : 2列・2行
   @media (min-width: $breakpoint-md) {
-    .n-f-ha { grid-column: 1 / 3; }
-    .n-f-fe { grid-column: 3 / 5; }
-    .n-f-tw { grid-column: 1 / 2; }
-    .n-f-fb { grid-column: 2 / 4; }
-    .n-f-ig { grid-column: 4 / 5; }
+    .n-f-ha, .n-f-fb { grid-column: 1 / 2; }
+    .n-f-fe, .n-f-ig { grid-column: 2 / 3; }
   }
   
   a {
@@ -1093,10 +1089,10 @@ $header-height-max: calc(175px + #{$header-margin-top});
     }
   }
   
-  // IE11 だけ Grid を修正する : アイコンのみ・5列1行表示に統一する
+  // IE11 だけ Grid を修正する : アイコンのみ・4列1行表示に統一する
   @media all and (-ms-high-contrast: none) {
     display: -ms-grid;
-    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr;  // repeat が使えない
+    -ms-grid-columns: 1fr 1fr 1fr 1fr;  // repeat が使えない
     
     li {
       margin: 0 .1rem;  // grid-gap の代わり
@@ -1104,9 +1100,8 @@ $header-height-max: calc(175px + #{$header-margin-top});
     
     .n-f-ha { -ms-grid-column: 1; }
     .n-f-fe { -ms-grid-column: 2; }
-    .n-f-tw { -ms-grid-column: 3; }
-    .n-f-fb { -ms-grid-column: 4; }
-    .n-f-ig { -ms-grid-column: 5; }
+    .n-f-fb { -ms-grid-column: 3; }
+    .n-f-ig { -ms-grid-column: 4; }
     
     // 幅が広がってもテキストを見せない
     span {
